--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello</h1>
+    <div
+    <h1 class="title">DOM Grab element</h1>
+    ></div>
 </body>
 </html>
